--- a/package.json
+++ b/package.json
@@ -6,9 +6,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.5",
+    "@reduxjs/toolkit": "^1.7.1",
+    "@tailwindcss/line-clamp": "^0.3.1",
+    "firebase": "^9.6.4",
     "next": "latest",
+    "next-auth": "^4.1.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-currency-format": "^1.1.0",
+    "react-currency-formatter": "^1.1.0",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "react-responsive-carousel": "^3.2.22"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
